--- a/app/src/main/res/layout/activity_schedule_program.xml
+++ b/app/src/main/res/layout/activity_schedule_program.xml
@@ -6,7 +6,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:padding="16dp"
-    tools:context=".radioprogram.android.ui.MaintainProgramScreen">
+    tools:context=".scheduleprogram.android.ui.ScheduleScreen">
 
 
         <TextView
