commiting modify schedules changes

--- a/app/src/main/res/layout/activity_schedule_program.xml
+++ b/app/src/main/res/layout/activity_schedule_program.xml
@@ -9,26 +9,22 @@
     tools:context=".scheduleprogram.android.ui.ScheduleScreen">
 
 
-        <EditText
-            android:id="@+id/textView3"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:text="Radio Program"
-            tools:text="Radio Program" />
+
 
         <LinearLayout
             android:layout_width="match_parent"
-            android:layout_height="62dp"
+            android:layout_height="wrap_content"
             android:orientation="horizontal">
-
-                <TextView
-                    android:id="@+id/text_view1"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content" />
+                <EditText
+                    android:id="@+id/pgslot_name_text_view"
+                    android:layout_width="212dp"
+                    android:layout_height="wrap_content"
+                    android:text="Radio Program"
+                    tools:text="Radio Program" />
 
                 <Button
-                    android:id="@+id/button1"
-                    android:layout_width="wrap_content"
+                    android:id="@+id/select_pg_button"
+                    android:layout_width="10dp"
                     android:layout_height="wrap_content"
                     android:layout_weight="1"
                     android:text="SELECT"
@@ -42,7 +38,7 @@
             tools:text="Date Of Program" />
 
         <EditText
-            android:id="@+id/pgslot_desc_text_view"
+            android:id="@+id/pgslot_date_text_view"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             tools:text="one" />
@@ -74,12 +70,14 @@
             tools:text="00:30:00" />
 
         <TextView
+            android:id="@+id/presenter_producer_textView"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:text="Presenter Or Producer"
+            android:text="Presenter and Producer"
             tools:text="Presenter Or Producer" />
 
         <LinearLayout
+            android:id="@+id/presenter_producer_layout"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:orientation="vertical">
@@ -91,19 +89,19 @@
 
 
                     <EditText
-                    android:id="@+id/text_view2"
+                    android:id="@+id/producer_text_view"
                     android:layout_width="212dp"
                     android:layout_height="wrap_content"
                     android:text="Please Select Producer" />
 
                 <Button
-                    android:id="@+id/button2"
+                    android:id="@+id/select_producer_button"
                     android:layout_width="60dp"
                     android:layout_height="wrap_content"
                     android:layout_weight="1"
-                    android:text="SELECT Pro"
-                    tools:text="SELECT Pro "
-                    android:background="@color/bg_main"
+                    android:text="SELECT"
+                    tools:text="SELECT"
+
                     />
 
                 </LinearLayout>
@@ -116,19 +114,19 @@
 
 
                     <EditText
-                    android:id="@+id/text_view3"
+                    android:id="@+id/presenter_text_view"
                     android:layout_width="212dp"
                     android:layout_height="wrap_content"
                     android:text="Please Select Presenter" />
 
                 <Button
-                    android:id="@+id/button3"
+                    android:id="@+id/select_presenter_button"
                     android:layout_width="60dp"
                     android:layout_height="wrap_content"
                     android:layout_weight="1"
-                    android:text="SELECT Pre"
-                    tools:text="SELECT Pre "
-                    android:background="@color/bg_main"/>
+                    android:text="SELECT"
+                    tools:text="SELECT"
+                    />
 
                 </LinearLayout>
         </LinearLayout>
