--- a/app/src/main/res/layout/activity_schedule_program_list.xml
+++ b/app/src/main/res/layout/activity_schedule_program_list.xml
@@ -6,26 +6,40 @@
     android:layout_height="match_parent"
     tools:context=".scheduleprogram.android.ui.ScheduleListScreen">
 
-    <ListView xmlns:android="http://schemas.android.com/apk/res/android"
-        xmlns:app="http://schemas.android.com/apk/res-auto"
-        xmlns:tools="http://schemas.android.com/tools"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:id="@+id/schedule_pm_list"
-        android:orientation="vertical"
-        android:paddingBottom="@dimen/activity_vertical_margin"
-        android:paddingLeft="@dimen/activity_horizontal_margin"
-        android:paddingRight="@dimen/activity_horizontal_margin"
-        android:paddingTop="@dimen/activity_vertical_margin"
-        tools:context=".scheduleprogram.android.ui.ScheduleListScreen">
+    <!--<ListView xmlns:android="http://schemas.android.com/apk/res/android"-->
+        <!--xmlns:app="http://schemas.android.com/apk/res-auto"-->
+        <!--xmlns:tools="http://schemas.android.com/tools"-->
+        <!--android:layout_width="match_parent"-->
+        <!--android:layout_height="match_parent"-->
+        <!--android:id="@+id/schedule_pm_list"-->
+        <!--android:orientation="vertical"-->
+        <!--android:paddingBottom="@dimen/activity_vertical_margin"-->
+        <!--android:paddingLeft="@dimen/activity_horizontal_margin"-->
+        <!--android:paddingRight="@dimen/activity_horizontal_margin"-->
+        <!--android:paddingTop="@dimen/activity_vertical_margin"-->
+        <!--tools:context=".scheduleprogram.android.ui.ScheduleListScreen">-->
 
-    </ListView>
-    <android.support.design.widget.FloatingActionButton
-        android:id="@+id/fab"
+    <!--</ListView>-->
+
+
+    <Button
+        android:id="@+id/BrowsePSbutton"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_alignParentBottom="true"
-        android:layout_alignParentRight="true"
-        android:layout_margin="@dimen/fab_margin"
-        android:src="@drawable/ic_create"/>
+
+        android:layout_below="@+id/CreateProgramSlotButton"
+        android:layout_centerHorizontal="true"
+        android:layout_marginTop="95dp"
+        android:text="Browse Program Slot" />
+
+    <Button
+        android:id="@+id/CreateProgramSlotButton"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+
+        android:layout_alignEnd="@+id/BrowsePSbutton"
+        android:layout_alignParentTop="true"
+        android:layout_marginTop="127dp"
+        android:text="Create Program Slot" />
+
 </RelativeLayout>
