copy is done ,but save of modify does'n work

--- a/app/src/main/res/layout/activity_schedule_program_list.xml
+++ b/app/src/main/res/layout/activity_schedule_program_list.xml
@@ -30,16 +30,16 @@
         android:layout_below="@+id/CreateProgramSlotButton"
         android:layout_centerHorizontal="true"
         android:layout_marginTop="95dp"
-        android:text="Browse Program Slot" />
+        android:text="Modify/Delete Program Slot" />
 
     <Button
         android:id="@+id/CreateProgramSlotButton"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
 
-        android:layout_alignEnd="@+id/BrowsePSbutton"
         android:layout_alignParentTop="true"
-        android:layout_marginTop="127dp"
-        android:text="Create Program Slot" />
+        android:layout_centerHorizontal="true"
+        android:layout_marginTop="129dp"
+        android:text="Create/Copy Program Slot" />
 
 </RelativeLayout>
