--- a/app/src/main/res/menu/menu_editor.xml
+++ b/app/src/main/res/menu/menu_editor.xml
@@ -17,4 +17,8 @@
         android:id="@+id/action_delete"
         android:title="@string/action_delete"
         app:showAsAction="always" />
+    <item
+        android:id="@+id/action_copy"
+        android:title="@string/action_copy"
+        app:showAsAction="always" />
 </menu>
